log
Sun 30 Apr 2023 06:00:42 PM UTC: 
 tests:  0|5
total_score: 0/70
0a51aec
Sun 30 Apr 2023 06:28:39 PM UTC: 
 sudoku.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:3: error: unknown type name ‘State’
   54 |   State* current_state=n->state;
      |   ^~~~~
sudoku.c:54:25: error: ‘Node’ has no member named ‘state’
   54 |   State* current_state=n->state;
      |                         ^~
sudoku.c:55:28: error: ‘Node’ has no member named ‘available_actions’
   55 |   List* available_actions=n->available_actions;
      |                            ^~
sudoku.c:57:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
   57 |    for(Node* node : available_actions){
      |                   ^
sudoku.c:58:25: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
   58 |       char* action_name=node->action_name;
      |                         ^~~~
      |                         Node
sudoku.c:58:25: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:59:7: error: unknown type name ‘State’
   59 |       State* new_state=node->state;
      |       ^~~~~
sudoku.c:61:7: error: implicit declaration of function ‘addToList’ [-Werror=implicit-function-declaration]
   61 |       addToList(adj_nodes, adj_node);
      |       ^~~~~~~~~
sudoku.c:55:9: error: unused variable ‘available_actions’ [-Werror=unused-variable]
   55 |   List* available_actions=n->available_actions;
      |         ^~~~~~~~~~~~~~~~~
sudoku.c:54:10: error: unused variable ‘current_state’ [-Werror=unused-variable]
   54 |   State* current_state=n->state;
      |          ^~~~~~~~~~~~~
sudoku.c: At top level:
sudoku.c:66:1: error: expected identifier or ‘(’ before ‘}’ token
   66 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
31d5377
Sun 30 Apr 2023 06:28:44 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:3: error: unknown type name ‘State’
   54 |   State* current_state=n->state;
      |   ^~~~~
sudoku.c:54:25: error: ‘Node’ has no member named ‘state’
   54 |   State* current_state=n->state;
      |                         ^~
sudoku.c:55:28: error: ‘Node’ has no member named ‘available_actions’
   55 |   List* available_actions=n->available_actions;
      |                            ^~
sudoku.c:57:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
   57 |    for(Node* node : available_actions){
      |                   ^
sudoku.c:58:25: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
   58 |       char* action_name=node->action_name;
      |                         ^~~~
      |                         Node
sudoku.c:58:25: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:59:7: error: unknown type name ‘State’
   59 |       State* new_state=node->state;
      |       ^~~~~
sudoku.c:61:7: error: implicit declaration of function ‘addToList’ [-Werror=implicit-function-declaration]
   61 |       addToList(adj_nodes, adj_node);
      |       ^~~~~~~~~
sudoku.c:55:9: error: unused variable ‘available_actions’ [-Werror=unused-variable]
   55 |   List* available_actions=n->available_actions;
      |         ^~~~~~~~~~~~~~~~~
sudoku.c:54:10: error: unused variable ‘current_state’ [-Werror=unused-variable]
   54 |   State* current_state=n->state;
      |          ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6e3ba3d
Thu 04 May 2023 10:40:14 PM UTC: 
 sudoku.c | 24 +++++++++++++++---------
 1 file changed, 15 insertions(+), 9 deletions(-)
 tests:  2|4
total_score: 15/70
2d2ee90
Fri 05 May 2023 12:17:41 AM UTC: 
 sudoku.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
 tests:  6|2
total_score: 45/70
b90e0eb
Fri 05 May 2023 01:19:57 AM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:112:22: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
  112 |     for(int i = 0, i < 9 ; i++){
      |                      ^
sudoku.c:112:31: error: expected ‘;’ before ‘)’ token
  112 |     for(int i = 0, i < 9 ; i++){
      |                               ^
      |                               ;
Compilation failed
ab61616
Fri 05 May 2023 01:20:14 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
916a915
Fri 05 May 2023 01:20:21 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
24c6407
Fri 05 May 2023 01:37:56 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  7|1
total_score: 55/70
3143a42
